--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   },
   "author": "João Vitor Miranda",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@prisma/client": "^6.5.0",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "pg": "^8.14.1",
+    "prisma": "^6.5.0"
+  }
 }
