--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.5.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "moment-timezone": "^0.5.48",
     "pg": "^8.14.1",
     "prisma": "^6.5.0"
   }
